update: get method
